Fix error hiding sidebar on mobile resolutions

--- a/app/assets/stylesheets/krudmin/core-ui/core/_variables.scss
+++ b/app/assets/stylesheets/krudmin/core-ui/core/_variables.scss
@@ -83,7 +83,7 @@ $sidebar-compact-height:              $sidebar-compact-width !default;
 $sidebar-color:                       #fff !default;
 $sidebar-bg:                          $gray-800 !default;
 $sidebar-borders:                     none !default;
-$mobile-sidebar-width:                220px !default;
+$mobile-sidebar-width:                250px !default;
 
 // Sidebar Header
 
